# nextkey

./: .gitignore  .goreleaser.yml  CHANGELOG.md  README.md  config.yaml  go.mod  go.sum  nextkey_client_config.json
.contextlens_index/: semantic_chunks.json  semantic_embeddings.npy  semantic_file_meta.json
.cursor/plans/: ---3014c50d.plan.md
.cursor/rules/: claude.mdc
backend/cmd/: embed.go  main.go
backend/cmd/static/: .gitkeep  README.md
backend/internal/api/: auth.go  card.go  cloudvar.go  crypto.go  project.go  routes.go
backend/internal/crypto/: aes.go  chacha20.go  custom_base64.go  encryptor.go  factory.go  init.go  meta.go  rc4.go  registry.go  xor.go
backend/internal/database/: db.go  errors.go
backend/internal/middleware/: auth.go  cors.go  decrypt.go  ratelimit.go
backend/internal/models/: admin.go  card.go  cloudvar.go  nonce.go  project.go  token.go  unbind_record.go
backend/internal/service/: auth.go  card.go  cloudvar.go  project.go
backend/pkg/config/: config.go
backend/pkg/utils/: random.go  response.go
demo/Minecraft-forge-1.20.10/: README.md  nextkeyforforge.7z
demo/cpp-client/: CMakeLists.txt  README.md
demo/cpp-client/examples/: example.cpp
demo/cpp-client/include/: NextKeyClient.hpp  nextkey_sdk.h
demo/cpp-client/src/: NextKeyClient.cpp
demo/gglua/: Collection-examples.lua  README.md  base64.lua  client.lua  example.lua  init.lua  json.lua  rc4.lua  utils.lua
demo/rust-sdk/: Cargo.toml  build.bat  build.rs  build.sh  cbindgen.toml
demo/rust-sdk/.cargo/: config.toml
demo/rust-sdk/include/: nextkey_sdk.h
demo/rust-sdk/src/: client.rs  crypto.rs  ffi.rs  lib.rs
demo/tools/: README.md  gui-test-client.py  requirements.txt
docs/: API.md  CLIENT.md  DEPLOY.md
docs/examples/: go-client.go  python-client.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: auth.js  card.js  cloudvar.js  crypto.js  project.js  request.js
frontend/src/composables/: useDialog.js  useDuration.js  useDurationEditor.js  usePagination.js  useResponsive.js  useTableSelection.js
frontend/src/constants/: cardTypes.js
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/styles/: animations.css  dialog.css  (+2 more)
scripts/: build.bat  build.sh
tools/: README.md  gui-test-client.py
(+44 files in other folders)
